--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="signup_successful">Signup successful. Sending verification email.</string>
     <string name="couldnt_send_verification_email">Couldn\'t send verification email.</string>
     <string name="you_cant_post_a_blank_comment">You can\'t post a blank comment</string>
+    <string name="upload_new_photo">Upload new photo</string>
 
     <!-- firebase -->
     <string name="field_username" translatable="false">username</string>
