--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,7 @@
     <string name="no_chats">No chats</string>
     <string name="write_a_message">Write a message</string>
     <string name="pia_esspunkt">Pia Esspunkt</string>
+    <string name="post">post</string>
 
 
 </resources>
