--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -95,5 +95,6 @@
     <string name="Save">Speichern</string>
     <string name="Change_Photo">Profilbild ändern</string>
     <string name="Log_Out">Abmelden</string>
+    <string name="New_Message">Neue Nachricht</string>
 
 </resources>
